--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,8 @@ body.menu-expanded button path {
   margin: 0;
 
   color: var(--primary-color);
+  
+  font-size: 1.6rem;
   line-height: 150%;
 }
 
